--- a/src/scss/componets/tur.scss
+++ b/src/scss/componets/tur.scss
@@ -29,4 +29,10 @@
   &__footer{
     text-align: center;
   }
+  @include r(1023){
+    margin-bottom: 50px;
+    &__body{
+      margin-bottom: 50px;
+    }
+  }
 }
