--- a/src/scss/componets/advantage.scss
+++ b/src/scss/componets/advantage.scss
@@ -6,6 +6,7 @@
 	&__header{
 		margin-bottom: 81px;
 		position: relative;
+		padding-left: 118px;
 		&:after{
 			content: '';
 			position: absolute;
@@ -25,7 +26,6 @@
 		line-height: 25px;
 		letter-spacing: 0.05em;
 		color: #E30613;
-		margin-left: 118px;
 	}
 	&__body{
 		display: flex;
@@ -67,6 +67,43 @@
 		padding-bottom: 22px;
 		border-bottom:1px solid #000;
 		flex: auto;
+	}
+	@include r(1023){
+		margin-bottom: 50px;
+		&__header{
+			margin-bottom: 40px;
+			position: relative;
+			padding-left: 50px;
+			&:after{
+				display: none;
+			}
+		}
+		&__title{
+			display: inline-block;
+			font-family: $font1;
+			font-weight: bold;
+			font-size: 32px;
+			line-height: 25px;
+			letter-spacing: 0.05em;
+			color: #E30613;
+		}
+		&__body{
+			padding-left: 0;
+		}
+		&__num{
+			font-size: 24px;
+			line-height: 25px;
+			margin-right: 30px;
+		}
+		&__name{
+			font-size: 18px;
+			line-height: 24px;
+			min-height: 73px;
+		}
+		&__item{
+			margin-bottom: 60px;
+			min-height: 95px;
+		}
 	}
 	@include r(767){
 		padding: 20px 0;
