--- a/src/scss/componets/footer.scss
+++ b/src/scss/componets/footer.scss
@@ -23,7 +23,12 @@
 		text-decoration: none;
 		display: block;
 	}
-
+	@include r(1023){
+		padding: 60px 0 36px;
+		&__body{
+			gap: 20px 50px;
+		}
+	}
 	@include r(767){
 		margin-top: 24px;
 		&__item{
