--- a/src/scss/componets/nav.scss
+++ b/src/scss/componets/nav.scss
@@ -21,19 +21,16 @@
 		white-space: nowrap;
 	}
 	@include r(1023){
-		position: fixed;
-		top: 0;
-		left: 0;
-		transform: translate(-100%,0);
-		background-color: #fff;
-		width: 100%;
-		height: 100%;
+		position: absolute;
+		top: 120%;
+		right: 0;
+		width: fit-content;
 		z-index: 20;
-		padding: 24px 0;
+		padding: 30px 48px;
+		display: none;
+		background-color: #D9D9D9;
 		&.active{
-			transform: translate(0,0);
-			transition: transform .3s ease;
-			overflow: auto;
+			display: block;
 		}
 		&__menu{
 			margin: 0;
@@ -66,25 +63,10 @@
 			}
 		}
 		&__link{
-			font-size: 13px;
+			font-size: 16px;
 			line-height: 16px;
 			padding: 0;
 			text-align: left;
-			&--arrow{
-				position: relative;
-				&:after{
-					content: '';
-					display: inline-block;
-					background-image: url("../img/icons-sprite.svg#icon-arrow-dropdown");
-					background-size: contain;
-					background-repeat: no-repeat;
-					width: 10px;
-					height: 7px;
-					margin-left: 15px;
-					transform: rotate(-90deg);
-					transition: all .3s ease;
-				}
-			}
 		}
 	}
 }
