--- a/src/scss/componets/opening.scss
+++ b/src/scss/componets/opening.scss
@@ -47,6 +47,30 @@
     flex: 1 0 100%;
     margin: 30px 0;
   }
+  @include r(1023){
+    &__header {
+      margin-bottom: 50px;
+      padding-left: 50px;
+    }
+    &__figure-big{
+      display: none;
+    }
+    &__figure{
+      display: block;
+      text-align: center;
+    }
+    &__body{
+      gap: 20px;
+    }
+    &__item{
+      flex: 1 0 calc(50% - 20px);
+      max-width: 50%;
+      text-align: center;
+      &:nth-of-type(-4n + 4){
+        margin-left: auto;
+      }
+    }
+  }
   @include r(767){
     &__figure-big{
       display: none;
