--- a/src/scss/componets/hero.scss
+++ b/src/scss/componets/hero.scss
@@ -2,6 +2,7 @@
 	overflow: hidden;
 	margin-bottom: 67px;
 	position: relative;
+	background-color: #EFEFEF;
 	&:after{
 		content: '';
 		position: absolute;
@@ -190,9 +191,11 @@
 	}
 	@include r(767){
 		text-align: center;
+		margin-bottom: 14px;
 		&__body{
 			display: flex;
 			flex-direction: column;
+			margin-bottom: 30px;
 		}
 		&__txt{
 			max-width: 582px;
@@ -200,23 +203,19 @@
 			order: 2;
 		}
 		&__img{
-			top: 0;
-			left: 0;
-			position: relative;
-			order: 1;
-			img{
-				max-width: 100%;
-				height: auto;
-			}
+			display: none;
 		}
 		&__title{
 			font-size: 24px;
 			line-height: 30px;
+			text-align: center;
 			span{
 				display: block;
-				margin-left: 0;
+				margin-left: auto;
 				margin-right: auto;
 				width: fit-content;
+				font-size: 36px;
+				line-height: 40px;
 			}
 		}
 		&__list{
@@ -224,8 +223,15 @@
 			padding: 0;
 			list-style: none;
 			li{
-				font-size: 13px;
+				font-size: 16px;
 				line-height: 25px;
+				text-align: left;
+				padding-left: 15px;
+				&:before{
+					left: 0;
+					position: absolute;
+					top: 11px;
+				}
 			}
 		}
 		&__row{
@@ -242,6 +248,26 @@
 				line-height: 14px;
 				padding: 10px;
 			}
+		}
+		&__lable{
+			font-size: 16px;
+			line-height: 33px;
+			max-width: 100%;
+			margin-bottom: 20px;
+		}
+		&__row{
+			grid-template-columns: 1fr;
+			gap: 30px;
+			.btn{
+				font-size: 16px;
+				padding: 19px 25px;
+				max-width: 250px;
+				width: 100%;
+				margin: 0 auto;
+			}
+		}
+		&__num{
+			display: none;
 		}
 	}
 }
