--- a/src/scss/componets/reviews.scss
+++ b/src/scss/componets/reviews.scss
@@ -153,63 +153,47 @@
 		}
 	}
 	@include r(767){
-		padding: 20px 0;
+		padding: 0;
+		margin-bottom: 20px;
 		&__header {
-			margin-bottom: 37px;
+			margin-bottom: 15px;
+			padding: 0;
+			text-align: center;
 		}
 		&__title{
-			font-size: 20px;
-			line-height: 25px;
+			font-size: 24px;
+			line-height: 50px;
 		}
 		&__name{
-			padding: 8px 50px;
-			font-size: 13px;
+			padding: 15px 25px;
+			font-size: 16px;
 			line-height: 25px;
-			margin-bottom: 15px;
+			margin-bottom: 24px;
 		}
 		&__anons{
-			font-size: 12px;
+			font-size: 14px;
+			line-height: 24px;
+			height: 148px;
+			margin-bottom: 24px;
+		}
+		&__link{
+			font-size: 14px;
 			line-height: 25px;
-			ul{
-				margin: 15px 0;
-				padding: 0;
-				list-style-type: none;
-				font-weight: normal;
-				color: #000000;
-
-				li {
-					position: relative;
-					padding-left: 15px;
-
-					&:before {
-						content: '';
-						position: absolute;
-						top: 9px;
-						left: 0;
-						border-radius: 50%;
-						background-color: #000;
-						width: 5px;
-						height: 5px;
-						margin-right: 10px;
-						vertical-align: middle;
-						overflow: hidden;
-					}
-				}
-			}
-			p{
-				font-size: 12px;
-				line-height: 25px;
-			}
 		}
-		.btn{
-			width: fit-content;
-			margin: 24px auto 0;
-			font-size: 12px;
-			line-height: 14px;
-			padding: 11px 13px;
+		&__footer{
+			margin-top: 21px;
 		}
-		.swiper-reviews-next{
-			background-size: 78px 26px;
+		&__btn{
+			width: 100%;
+			margin: 0;
+			font-size: 16px;
+			line-height: 19px;
+			&:after{
+				top: 1px;
+				right: 0;
+				width: 62px;
+				height: 22px;
+			}
 		}
 	}
 }
