--- a/src/scss/componets/concerns.scss
+++ b/src/scss/componets/concerns.scss
@@ -94,4 +94,52 @@
       flex: 1 0 calc(50% - 56px);
     }
   }
+  @include r(767){
+    padding: 0 0 30px;
+    &__header {
+      margin-bottom: 20px;
+      padding-left: 0;
+      text-align: center;
+    }
+    &__title{
+      font-size: 24px;
+      line-height: 25px;
+    }
+    &__col{
+      flex: 1 0 100%;
+    }
+    &__item{
+
+      margin-bottom: 23px;
+      padding-left: 48px;
+    }
+    &__txt{
+      padding-bottom: 25px;
+    }
+    &__name{
+      font-size: 16px;
+      line-height: 25px;
+      margin-bottom: 4px;
+    }
+    details{
+      &[open]{
+        summary{
+          &:before {
+            transform: rotate(90deg);
+          }
+        }
+      }
+      summary{
+        font-size: 14px;
+        line-height: 25px;
+        &:before {
+          width: 43px;
+          left: 0;
+        }
+      }
+      &>div{
+        margin-top: 10px;
+      }
+    }
+  }
 }
