--- a/src/scss/componets/tabs-format.scss
+++ b/src/scss/componets/tabs-format.scss
@@ -104,11 +104,9 @@
 		}
 	}
 	@include r(767){
-		margin: 20px 0;
+		margin: 0 0 30px;
 		&__header{
-			margin-bottom: 37px;
-			position: relative;
-
+			display: none;
 		}
 		&__title{
 			font-size: 20px;
