--- a/src/scss/componets/tur.scss
+++ b/src/scss/componets/tur.scss
@@ -35,4 +35,22 @@
       margin-bottom: 50px;
     }
   }
+  @include r(767){
+    margin-bottom: 30px;
+    &__body{
+      margin-bottom: 30px;
+      height: 221px;
+      img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        display: block;
+      }
+    }
+    &__btn{
+      font-size: 16px;
+      max-width: 334px;
+      width: 100%;
+    }
+  }
 }
