--- a/src/scss/componets/advantage.scss
+++ b/src/scss/componets/advantage.scss
@@ -68,6 +68,15 @@
 		border-bottom:1px solid #000;
 		flex: auto;
 	}
+	&__link{
+		font-weight: 700;
+		font-size: 18px;
+		line-height: 25px;
+		letter-spacing: 0.05em;
+		text-decoration-line: underline;
+		color: #E30613;
+		margin-left: 53px;
+	}
 	@include r(1023){
 		margin-bottom: 50px;
 		&__header{
@@ -150,6 +159,12 @@
 			line-height: 25px;
 			min-height: auto;
 			padding-bottom: 16px;
+		}
+		&__link{
+			font-size: 16px;
+			line-height: 25px;
+			margin-left: 0;
+			display: block;
 		}
 	}
 }
