--- a/src/scss/mpr-franchise.scss
+++ b/src/scss/mpr-franchise.scss
@@ -203,6 +203,7 @@ img{
 @import "componets/concerns";
 @import "componets/footer-form";
 @import "componets/send-plan";
+@import "componets/number";
 
 
 
