--- a/src/scss/componets/parametrs.scss
+++ b/src/scss/componets/parametrs.scss
@@ -1,68 +1,31 @@
 .parametrs {
-	margin: 30px 0 80px;
-
-	&.active {
-		.dropdown-block {
-			display: block;
-		}
-
-		.parametrs__arrow {
-			transform: rotate(0);
-		}
-	}
-
+	padding: 60px 0 35px;
+	background-color: #EFEFEF;
 	&__header {
-		margin-bottom: 100px;
-		position: relative;
+		margin-bottom: 85px;
+		padding-left: 118px;
 	}
-
-	&__title {
+	&__title{
 		display: inline-block;
-		font-weight: bold;
-		font-size: 24px;
-		line-height: 25px;
-		letter-spacing: 0.05em;
-		position: relative;
-		width: fit-content;
-
-		&:after {
-			content: '';
-			position: absolute;
-			bottom: -15px;
-			left: 0;
-			width: 100%;
-			height: 3px;
-			background-color: #E30613;
-		}
-	}
-
-	&__arrow {
-		display: none;
+		font-weight: 700;
+		font-size: 32px;
+		line-height: 50px;
+		letter-spacing: -0.3px;
+		color: #E30613;
 	}
 
 	&__body {
 		display: flex;
+		flex-wrap: wrap;
 		overflow: hidden;
+		justify-content: space-between;
+		gap: 20px;
 	}
 
 	&__img {
 		position: relative;
-		left: -50%;
-		flex: 0 0 50%;
-		transform: translate(-100%, 0);
-		max-height: 687px;
+		flex: 0 0 calc(50% - 20px);
 		pointer-events: none;
-
-		&:after {
-			content: '';
-			position: absolute;
-			top: -1px;
-			right: -300px;
-			background: linear-gradient(269.78deg, #FFFFFF 65.2%, rgba(255, 255, 255, 0) 96.25%);
-			width: 570px;
-			height: 100%;
-			pointer-events: none;
-		}
 
 		img {
 			width: 100%;
@@ -74,14 +37,10 @@
 	}
 
 	&__txt {
-		flex: 0 0 100%;
+		flex: 1 0 calc(40% - 20px);
+		max-width: 548px;
 		position: relative;
 		z-index: 100;
-	}
-
-	&__content {
-		width: 50%;
-		margin-left: auto;
 	}
 
 	&__name {
@@ -90,11 +49,11 @@
 		line-height: 25px;
 		letter-spacing: 0.05em;
 		color: #000000;
-		margin-bottom: 32px;
+		margin-bottom: 17px;
 	}
 
 	&__list {
-		margin: 0 0 47px 15px;
+		margin: 0 0 19px 0;
 		padding: 0;
 		list-style-type: none;
 		font-weight: normal;
@@ -123,34 +82,23 @@
 		}
 	}
 
-	@include r(767) {
-		margin: 30px 0;
-		&__arrow {
-			position: absolute;
-			bottom: -18px;
-			right: 0;
-			background-repeat: no-repeat;
-			transform: rotate(-90deg);
-			width: 26px;
-			height: 13px;
-			display: block;
-			background-image: url("../img/icons-sprite.svg#icon-arrow-dropdown");
-		}
-
-		.dropdown-block {
-			display: none;
-		}
-
+	@include r(1023){
 		&__header {
-			margin-bottom: 37px;
+			margin-bottom: 40px;
+			padding-left: 50px;
 		}
-		&__title {
-			font-size: 20px;
-			line-height: 25px;
+	}
 
-			&:after {
-				width: 142px;
-			}
+	@include r(767) {
+		padding-bottom: 7px;
+		&__header {
+			margin-bottom: 27px;
+			padding: 0;
+			text-align: center;
+		}
+		&__title{
+			font-size: 24px;
+			line-height: 50px;
 		}
 		&__body {
 			display: grid;
@@ -170,20 +118,15 @@
 			position: relative;
 			left: 0;
 			flex: 0 0 100%;
-			transform: translate(-0, 0);
-
-			&:after {
-				display: none;
-			}
 		}
 		&__name {
-			margin-bottom: 10px;
-			font-size: 13px;
+			margin-bottom: 17px;
+			font-size: 16px;
 			line-height: 25px;
 		}
 		&__list {
 			margin-bottom: 10px;
-			font-size: 12px;
+			font-size: 14px;
 			line-height: 25px;
 		}
 	}
