--- a/src/scss/componets/uniform.scss
+++ b/src/scss/componets/uniform.scss
@@ -11,42 +11,23 @@
 		}
 	}
 
-	&__arrow {
-		display: none;
-	}
 
-	&__header {
-		margin-bottom: 100px;
+	&__header{
+		margin-bottom: 81px;
 		position: relative;
+		padding-left: 118px;
 	}
-
-	&__title {
+	&__title{
 		display: inline-block;
+		font-family: $font1;
 		font-weight: bold;
-		font-size: 24px;
+		font-size: 32px;
 		line-height: 25px;
 		letter-spacing: 0.05em;
-		position: relative;
-		width: fit-content;
-
-		&:after {
-			content: '';
-			position: absolute;
-			bottom: -15px;
-			left: 0;
-			width: 100%;
-			height: 3px;
-			background-color: #E30613;
-		}
+		color: #E30613;
 	}
 
 	&__body {
-		display: grid;
-		grid-template-columns: 1fr 1fr;
-		grid-gap: 20px;
-		justify-content: center;
-		align-items: center;
-
 		img {
 			align-self: center;
 			justify-content: center;
@@ -54,29 +35,19 @@
 			margin: 0 auto;
 		}
 	}
+	.swiper-container-uniform{
+		overflow: hidden;
+	}
 
 	@include r(767) {
-		&__arrow {
-			position: absolute;
-			bottom: -18px;
-			right: 0;
-			background-repeat: no-repeat;
-			transform: rotate(-90deg);
-			width: 26px;
-			height: 13px;
-			display: block;
-			background-image: url("../img/icons-sprite.svg#icon-arrow-dropdown");
-		}
-		.dropdown-block {
-			display: none;
-		}
 		&__header{
-			margin-bottom: 37px;
+			margin-bottom: 81px;
+			position: relative;
+			padding-left: 118px;
 		}
-		&__title {
-			font-weight: bold;
-			font-size: 20px;
-			line-height: 25px;
+		&__title{
+			font-size: 24px;
+			line-height: 50px;
 		}
 		&__body {
 			display: grid;
