--- a/src/scss/componets/learning-main.scss
+++ b/src/scss/componets/learning-main.scss
@@ -1,39 +1,4 @@
 .learning-main {
-	padding: 80px 0;
-	&__header {
-		margin-bottom: 100px;
-		position: relative;
-	}
-	&.active {
-		.dropdown-block {
-			display: block;
-		}
-
-		.learning-main__arrow {
-			transform: rotate(0);
-		}
-	}
-	&__arrow {
-		display: none;
-	}
-	&__title{
-		display: inline-block;
-		font-weight: bold;
-		font-size: 24px;
-		line-height: 25px;
-		letter-spacing: 0.05em;
-		position: relative;
-		&:after{
-			content: '';
-			position: absolute;
-			bottom: -15px;
-			left: 0;
-			width: 100%;
-			height: 3px;
-			background-color: #E30613;
-		}
-	}
-
 	&__img {
 		position: relative;
 		margin-bottom: 50px;
@@ -42,7 +7,7 @@
 			position: absolute;
 			bottom: 0;
 			left: 0;
-			background: linear-gradient(180deg, rgba(255, 255, 255, 0) 29.6%, #FFFFFF 94.91%);
+			background: rgba(77, 77, 77, 0.6);
 			width: 100%;
 			height: 250px;
 		}
