--- a/src/scss/componets/learning-main.scss
+++ b/src/scss/componets/learning-main.scss
@@ -1,6 +1,17 @@
 .learning-main {
+	position: relative;
+	padding: 85px 0;
+	margin-bottom: 85px;
+	overflow: hidden;
 	&__img {
-		position: relative;
+		position: absolute;
+		top: 0;
+		left: 0;
+		bottom: 0;
+		right: 0;
+		z-index: -1;
+		width: 100%;
+		height: 100%;
 		margin-bottom: 50px;
 		&:before{
 			content: '';
@@ -9,25 +20,42 @@
 			left: 0;
 			background: rgba(77, 77, 77, 0.6);
 			width: 100%;
-			height: 250px;
+			height: 100%;
 		}
 		img{
 			width: 100%;
+			height: 100%;
+			display: block;
+			object-fit: cover;
 		}
 	}
-
+	&__header{
+		margin-bottom: 86px;
+	}
+	&__title{
+		font-family: $font1;
+		font-weight: 700;
+		font-size: 32px;
+		line-height: 25px;
+		letter-spacing: 0.05em;
+		color: #FFFFFF;
+	}
 	&__body {
-		display: grid;
-		grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
-		grid-gap: 40px;
+		display: flex;
+		flex-wrap: wrap;
+		gap: 40px;
 		justify-content: space-between;
 		align-items: flex-start;
 	}
 	&__item{
-		max-width: 262px;
+		flex: 1 0 calc(33.33% - 40px);
+		max-width: 324px;
 		display: flex;
 		flex-direction: column;
 		height: 100%;
+		&.align-center{
+			align-self: center;
+		}
 	}
 	&__icon {
 		background-image: url("../img/icons-sprite.svg#icon-training-red");
@@ -42,15 +70,15 @@
 	}
 
 	&__name {
-		font-weight: bold;
-		font-size: 18px;
+		font-size: 16px;
 		line-height: 25px;
 		letter-spacing: 0.05em;
-		color: #000000;
+		color: #FFFFFF;
 	}
 	.btn{
-		margin: auto 0 20px;
+		margin: 80px auto 20px;
 		width: 100%;
+		max-width: 329px;
 	}
 
 	@include r(767) {
