--- a/src/scss/componets/learning-page.scss
+++ b/src/scss/componets/learning-page.scss
@@ -1,5 +1,6 @@
 .learning-page{
 	overflow: hidden;
+	margin-bottom: 110px;
 	&__title{
 		display: inline-block;
 		font-weight: bold;
@@ -21,29 +22,42 @@
 	}
 	h2{
 		font-weight: bold;
-		font-size: 24px;
+		font-size: 18px;
 		line-height: 25px;
 		letter-spacing: 0.05em;
-		color: #000000
+		color: #000000;
+		margin: 0 0 21px;
 	}
 	&__body{
-		max-width: 970px;
-		margin-left: auto;
-		margin-right: 0;
+		margin-bottom: 61px;
+		p{
+			font-family: $font1;
+			font-style: normal;
+			font-weight: 400;
+			font-size: 14px;
+			line-height: 25px;
+			text-align: justify;
+			letter-spacing: 0.05em;
+			color: #333333;
+		}
 	}
 	&__galllery{
 		display: flex;
 		gap: 20px;
+		margin-top: 38px;
+		margin-bottom: 75px;
 		img{
 			border-radius: 10px;
 		}
 	}
 	&__dark{
-		 margin: 0;
+
 		 background-color: #E5E5E5;
 		 border-radius: 10px;
-		 padding: 10px 20px;
+		 padding: 27px 3px 27px 114px;
 		 line-height: 25px;
+		margin-top: 27px;
+		margin-bottom: 76px;
 		 p{
 			 font-weight: bold;
 			 margin: 0;
@@ -63,7 +77,9 @@
 		letter-spacing: 0.05em;
 		text-transform: lowercase;
 		color: #000000;
-
+		&--margin{
+			margin-left: 114px;
+		}
 		li {
 			position: relative;
 			padding-left: 15px;
@@ -86,6 +102,18 @@
 		display: flex;
 		justify-content: space-between;
 		gap: 20px;
+		.btn{
+			margin-top: 63px;
+		}
+		P{
+			font-family: $font1;
+			font-size: 14px;
+			line-height: 25px;
+			color: #333333;
+		}
+	}
+	.container{
+		max-width: 1160px;
 	}
 	@include r(767){
 		&__title{
