--- a/src/scss/componets/footer-form.scss
+++ b/src/scss/componets/footer-form.scss
@@ -1,6 +1,7 @@
 .footer-form{
   background-color: #EFEFEF;
   padding: 81px 0 105px;
+  overflow: hidden;
   &__header {
     margin-bottom: 32px;
     text-align: center;
