--- a/src/scss/componets/learning-main.scss
+++ b/src/scss/componets/learning-main.scss
@@ -29,6 +29,12 @@
 			object-fit: cover;
 		}
 	}
+	&__img-logo{
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%,-50%);
+	}
 	&__header{
 		margin-bottom: 86px;
 	}
@@ -82,23 +88,9 @@
 	}
 
 	@include r(767) {
-		padding: 20px 0;
-		&__arrow {
-			position: absolute;
-			bottom: -18px;
-			right: 0;
-			background-repeat: no-repeat;
-			transform: rotate(-90deg);
-			width: 26px;
-			height: 13px;
-			display: block;
-			background-image: url("../img/icons-sprite.svg#icon-arrow-dropdown");
-		}
-		.dropdown-block {
-			display: none;
-		}
+		padding: 0;
 		&__header{
-			margin-bottom: 37px;
+			display: none;
 		}
 		&__title{
 			font-size: 20px;
@@ -110,7 +102,7 @@
 		&__body {
 			display: grid;
 			grid-template-columns: 1fr;
-			grid-gap: 24px;
+			grid-gap: 20px;
 			justify-content: space-between;
 		}
 		&__img {
@@ -121,9 +113,9 @@
 				position: absolute;
 				bottom: 0;
 				left: 0;
-				background: linear-gradient(180deg, rgba(255, 255, 255, 0) 29.6%, #FFFFFF 94.91%);
+				background: rgba(77, 77, 77, 0.6);
 				width: 100%;
-				height: 50px;
+				height: 100%;
 			}
 			img{
 				width: 100%;
@@ -134,10 +126,16 @@
 			display: flex;
 			flex-direction: row;
 			justify-content: flex-start;
+			&.align-center{
+				display: none;
+			}
 		}
 		&__name {
-			font-size: 12px;
+			font-weight: 400;
+			font-size: 14px;
 			line-height: 25px;
+			letter-spacing: 0.05em;
+			color: #000000;
 		}
 		.btn{
 			width: fit-content;
