--- a/src/scss/componets/percent.scss
+++ b/src/scss/componets/percent.scss
@@ -17,7 +17,7 @@
 		padding-left: 118px;
 	}
 	&__title{
-		display: inline-block;
+		font-family: $font1;
 		font-weight: 700;
 		font-size: 32px;
 		line-height: 50px;
