--- a/src/scss/componets/hero.scss
+++ b/src/scss/componets/hero.scss
@@ -269,5 +269,15 @@
 		&__num{
 			display: none;
 		}
+		&__video{
+
+			height: 221px;
+			img{
+				width: 100%;
+				height: 100%;
+				display: block;
+				object-fit: cover;
+			}
+		}
 	}
 }
