--- a/src/scss/componets/reviews.scss
+++ b/src/scss/componets/reviews.scss
@@ -153,7 +153,8 @@
 			padding: 15px 25px;
 			font-size: 16px;
 			line-height: 25px;
-			margin-bottom: 24px;
+			max-width: 233px;
+			margin: 0 auto 24px;
 		}
 		&__anons{
 			font-size: 14px;
