--- a/src/scss/componets/opening.scss
+++ b/src/scss/componets/opening.scss
@@ -79,9 +79,10 @@
       text-align: center;
     }
     &__title{
+      max-width: 230px;
+      margin: 0 auto 14px;
       font-size: 24px;
       line-height: 36px;
-      margin-bottom: 14px;
     }
     &__subtitle{
       font-size: 16px;
