--- a/src/scss/componets/video-shops.scss
+++ b/src/scss/componets/video-shops.scss
@@ -105,6 +105,8 @@
     &__title{
       font-size: 24px;
       line-height: 25px;
+      max-width: 300px;
+      margin: 0 auto;
     }
     &__name{
       font-size: 16px;
