--- a/src/scss/componets/calculator.scss
+++ b/src/scss/componets/calculator.scss
@@ -1,28 +1,19 @@
 .calculator{
-	margin-bottom: 30px;
-	&__header{
-		margin-bottom: 60px;
+	padding: 30px 0 89px;
+	margin-bottom: 81px;
+	background-color: #EFEFEF;
+	&__header {
+		margin-bottom: 72px;
 	}
 	&__title{
 		display: inline-block;
-		font-weight: bold;
-		font-size: 24px;
-		line-height: 25px;
-		letter-spacing: 0.05em;
-		color: #000000;
-		position: relative;
-		&:before{
-			content: '';
-			position: absolute;
-			bottom: -5px;
-			left: 0;
-			background-color: #E30613;
-			width: 100%;
-			height: 3px;
-		}
+		font-weight: 700;
+		font-size: 32px;
+		line-height: 50px;
+		letter-spacing: -0.3px;
+		color: #E30613;
 	}
 	&__body{
-		max-width: 667px;
 		margin: auto;
 	}
 	&__span{
@@ -99,39 +90,41 @@
 		color: #4D4D4D;
 	}
 	&__btn{
-		width: 264px;
+		width: 329px;
 		font-weight: bold;
-		font-size: 14px;
-		line-height: 17px;
+		font-size: 22px;
+		line-height: 26px;
 		letter-spacing: 0.05em;
-		padding: 6px 25px;
-		margin: 0 auto;
+		padding: 17px 25px;
+		margin: 0 0 0 178px;
 		display: block;
 	}
 	.form-group{
 		display: flex;
 		align-items: center;
-		justify-content: space-between;
+		margin-bottom: 46px;
 	}
 	.form-label{
+		font-family: $font1;
 		font-weight: bold;
-		font-size: 18px;
-		line-height: 22px;
+		font-size: 16px;
+		line-height: 20px;
 		letter-spacing: 0.05em;
 		color: #000000;
+		flex: 1 0 278px;
+		max-width: 278px;
 	}
 	.form-control{
 		border: 1px solid #E30613;
 		border-radius: 5px;
 		max-width: 162px;
-		margin-right: 26px;
-		margin-left: auto;
-		padding: 3px .75rem;
+		padding: 14px .75rem;
 		font-size: 18px;
 		line-height: 21px;
 		text-align: center;
 		color: #8A8383;
-
+		background-color: rgba(217, 217, 217, 0.5);;
+		margin-right: 135px;
 		&::-webkit-outer-spin-button,
 		&::-webkit-inner-spin-button {
 			-webkit-appearance: none;
@@ -145,24 +138,18 @@
 		text-align: center;
 		display: none;
 	}
+	.container{
+		max-width: 1160px;
+	}
 	@include r(767){
-		&__header{
-			margin-bottom: 37px;
-			position: relative;
-
+		&__header {
+			margin-bottom: 15px;
+			padding: 0;
+			text-align: center;
 		}
 		&__title{
-			font-size: 20px;
-			line-height: 25px;
-			&:after{
-				content: '';
-				position: absolute;
-				bottom: -15px;
-				left: 0;
-				width: 142px;
-				height: 3px;
-				background-color: #fff;
-			}
+			font-size: 24px;
+			line-height: 50px;
 		}
 		&__modal{
 			display: block;
