--- a/src/scss/componets/investment.scss
+++ b/src/scss/componets/investment.scss
@@ -3,33 +3,30 @@
 	overflow: hidden;
 
 	&__header {
-		margin-bottom: 100px;
+		margin-bottom: 79px;
 	}
-
-	&__title {
+	&__title{
 		display: inline-block;
-		font-weight: bold;
-		font-size: 24px;
-		line-height: 25px;
-		letter-spacing: 0.05em;
-		position: relative;
-		width: fit-content;
-
-		&:after {
-			content: '';
-			position: absolute;
-			bottom: -15px;
-			left: 0;
-			width: 100%;
-			height: 3px;
-			background-color: #E30613;
-		}
+		font-weight: 700;
+		font-size: 32px;
+		line-height: 50px;
+		letter-spacing: -0.3px;
+		color: #E30613;
 	}
 
 	&__txt {
 		max-width: 710px;
 		position: relative;
 		margin-right: 40px;
+		P{
+			font-family: $font1;
+			font-weight: 400;
+			font-size: 14px;
+			line-height: 25px;
+			letter-spacing: 0.05em;
+			color: #000000;
+			margin: 0 0 19px;
+		}
 	}
 
 	&__list {
@@ -89,10 +86,12 @@
 	}
 
 	&__name {
-		font-size: 14px;
+		font-weight: 700;
+		font-size: 18px;
 		line-height: 25px;
 		letter-spacing: 0.05em;
 		color: #000000;
+		margin: 0 0 19px;
 	}
 
 	&__price {
@@ -105,7 +104,9 @@
 		position: relative;
 		flex-shrink: 0;
 	}
-
+	.container{
+		max-width: 1160px;
+	}
 	@include r(767) {
 		margin: 20px 0;
 		.text-danger{
