--- a/src/scss/componets/header.scss
+++ b/src/scss/componets/header.scss
@@ -11,8 +11,8 @@
 		justify-content: center;
 		z-index: 15;
 		flex-shrink: 0;
-		width: 29px;
-		height: 29px;
+		width: 34px;
+		height: 34px;
 		padding: 5px;
 		cursor: pointer;
 		display: none;
@@ -63,7 +63,8 @@
 	}
 
 	&__phone {
-		font-weight: bold;
+		font-family: $font1;
+		font-weight: 700;
 		font-size: 24px;
 		line-height: 50px;
 		text-decoration: none;
@@ -121,6 +122,7 @@
 
 	}
 	@include r(767){
+		padding-bottom: 12px;
 		&__body{
 			justify-content: space-between;
 		}
@@ -131,7 +133,8 @@
 			text-align: left;
 		}
 		&__button {
-			margin-right: 0;
+			top: -12px;
+			margin-right: 8px;
 			margin-left: auto;
 		}
 	}
