--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -9,9 +9,8 @@
 @font-face {
 	font-family: 'AvantGardeCTT';
 	src: url('../fonts/AvantGardeCTT/AvantGardeCTT-bold.ttf') format('truetype');
-	font-weight: 700;
+	font-weight: bold;
 	font-style: normal;
-	font-display: swap;
 }
 @font-face {
 	font-family: 'CenturyGothic';
