--- a/src/scss/componets/tabs-format.scss
+++ b/src/scss/componets/tabs-format.scss
@@ -55,15 +55,15 @@
 			margin: 0;
 			cursor: pointer;
 			background: #fff;
-			font-weight: bold;
 			transition: background ease 0.2s;
 			color: #E30613;
 			border: 1px solid #E30613;
 			box-sizing: border-box;
 			border-radius: 4px;
 			text-align: center;
-			font-size: 18px;
-			line-height: 22px;
+			font-weight: 700;
+			font-size: 22px;
+			line-height: 26px;
 			letter-spacing: 0.05em;
 			flex-grow: 1;
 		}
