--- a/src/scss/componets/learning-page.scss
+++ b/src/scss/componets/learning-page.scss
@@ -1,199 +1,287 @@
-.learning-page{
-	overflow: hidden;
-	margin-bottom: 110px;
-	&__title{
-		display: inline-block;
-		font-weight: bold;
-		font-size: 24px;
-		line-height: 25px;
-		letter-spacing: 0.05em;
-		position: relative;
-		width: fit-content;
-		margin-bottom: 30px;
-		&:after {
-			content: '';
-			position: absolute;
-			bottom: -15px;
-			left: 0;
-			width: 100%;
-			height: 3px;
-			background-color: #E30613;
-		}
-	}
-	h2{
-		font-weight: bold;
-		font-size: 18px;
-		line-height: 25px;
-		letter-spacing: 0.05em;
-		color: #000000;
-		margin: 0 0 21px;
-	}
-	&__body{
-		margin-bottom: 61px;
-		p{
-			font-family: $font1;
-			font-style: normal;
-			font-weight: 400;
-			font-size: 14px;
-			line-height: 25px;
-			text-align: justify;
-			letter-spacing: 0.05em;
-			color: #333333;
-		}
-	}
-	&__galllery{
-		display: flex;
-		gap: 20px;
-		margin-top: 38px;
-		margin-bottom: 75px;
-		img{
-			border-radius: 10px;
-		}
-	}
-	&__dark{
+.learning-page {
+    overflow: hidden;
+    margin-bottom: 110px;
+    h2 {
+        font-weight: bold;
+        font-size: 18px;
+        line-height: 25px;
+        letter-spacing: 0.05em;
+        color: #000000;
+        margin: 0 0 21px;
+    }
 
-		 background-color: #E5E5E5;
-		 border-radius: 10px;
-		 padding: 27px 3px 27px 114px;
-		 line-height: 25px;
-		margin-top: 27px;
-		margin-bottom: 76px;
-		 p{
-			 font-weight: bold;
-			 margin: 0;
-			 font-size: 14px;
-		 }
-		 ul{
-			 margin: 0;
-		 }
-	 }
-	&__list{
-		margin: 27px 0;
-		padding: 0;
-		list-style-type: none;
-		font-weight: normal;
-		font-size: 14px;
-		line-height: 35px;
-		letter-spacing: 0.05em;
-		text-transform: lowercase;
-		color: #000000;
-		&--margin{
-			margin-left: 114px;
-		}
-		li {
-			position: relative;
-			padding-left: 15px;
-			&:before {
-				content: '';
-				position: absolute;
-				top: 16px;
-				left: 0;
-				border-radius: 50%;
-				background-color: #000;
-				width: 5px;
-				height: 5px;
-				margin-right: 10px;
-				vertical-align: middle;
-				overflow: hidden;
-			}
-		};
-	}
-	&__row{
-		display: flex;
-		gap: 20px 86px;
-		.btn{
-			margin-top: 63px;
-			width: 329px;
-		}
-		P{
-			font-family: $font1;
-			font-size: 14px;
-			line-height: 25px;
-			color: #333333;
-		}
-	}
-	.container{
-		max-width: 1160px;
-	}
-	@include r(767){
-		&__title{
-			font-size: 20px;
-			line-height: 25px;
-			margin-bottom: 30px;
-			&:after {
-				content: '';
-				position: absolute;
-				bottom: -15px;
-				left: 0;
-				width: 142px;
-				height: 3px;
-				background-color: #E30613;
-			}
-		}
-		&__body{
-			margin-bottom: 30px;
-		}
-		&__galllery{
-			flex-wrap: wrap;
-			margin-bottom: 22px;
-			&>div{
-				width: 100%;
-			}
-			img{
-				width: 100%;
-			}
-		}
-		h2{
-			font-size: 20px;
-			margin-bottom: 11px;
-		}
-		p{
-			font-size: 12px;
-		}
-		&__dark{
-			margin: 0 -15px;
-			padding: 22px 27px;
-		}
-		&__list{
-			margin: 27px 0;
-			padding: 0;
-			list-style-type: none;
-			font-weight: normal;
-			font-size: 14px;
-			line-height: 35px;
-			letter-spacing: 0.05em;
-			text-transform: lowercase;
-			color: #000000;
+    &__body {
+        margin-bottom: 61px;
 
-			li {
-				position: relative;
-				padding-left: 15px;
-				&:before {
-					content: '';
-					position: absolute;
-					top: 9px;
-					left: 0;
-					border-radius: 50%;
-					background-color: #000;
-					width: 5px;
-					height: 5px;
-					margin-right: 10px;
-					vertical-align: middle;
-					overflow: hidden;
-				}
-			};
-		}
-		&__row{
-			flex-wrap: wrap;
-			gap: 0;
-			&>div{
-				width: 100%;
-			}
-			.btn{
-				width: 100%;
-				display: block;
-				margin: 0 auto;
-			}
-		}
-	}
+        p {
+            font-family: $font1;
+            font-style: normal;
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 25px;
+            letter-spacing: 0.05em;
+            color: #333333;
+        }
+    }
+
+    &__galllery {
+        display: flex;
+        gap: 20px;
+        margin-top: 38px;
+        margin-bottom: 75px;
+
+        img {
+            border-radius: 10px;
+        }
+    }
+
+    &__dark {
+
+        background-color: #E5E5E5;
+        border-radius: 10px;
+        padding: 27px 3px 27px 114px;
+        line-height: 25px;
+        margin-top: 27px;
+        margin-bottom: 76px;
+
+        p {
+            font-weight: bold;
+            margin: 0;
+            font-size: 14px;
+        }
+
+        ul {
+            margin: 0;
+        }
+    }
+
+    &__list {
+        margin: 27px 0;
+        padding: 0;
+        list-style-type: none;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 35px;
+        letter-spacing: 0.05em;
+        text-transform: lowercase;
+        color: #000000;
+
+        &--margin {
+            margin-left: 114px;
+        }
+
+        li {
+            position: relative;
+            padding-left: 15px;
+
+            &:before {
+                content: '';
+                position: absolute;
+                top: 16px;
+                left: 0;
+                border-radius: 50%;
+                background-color: #000;
+                width: 5px;
+                height: 5px;
+                margin-right: 10px;
+                vertical-align: middle;
+                overflow: hidden;
+            }
+        }
+    }
+
+    &__row {
+        display: flex;
+        gap: 20px 86px;
+        &-name{
+            font-family: $font1;
+            font-weight: 700;
+            font-size: 14px;
+            line-height: 25px;
+        }
+        p{
+            font-family: $font1;
+            font-size: 14px;
+            line-height: 25px;
+            color: #333333;
+            margin: 0;
+        }
+        .btn {
+            width: 329px;
+            margin-top: 63px;
+        }
+
+        P {
+            font-family: $font1;
+            font-size: 14px;
+            line-height: 25px;
+            color: #333333;
+        }
+    }
+
+    .container {
+        max-width: 1160px;
+    }
+
+    @include r(767) {
+        &__body {
+            margin-bottom: 30px;
+        }
+        &__galllery {
+            flex-wrap: wrap;
+            margin-bottom: 22px;
+
+            & > div {
+                width: 100%;
+            }
+
+            img {
+                width: 100%;
+            }
+        }
+        h2 {
+            font-size: 20px;
+            margin-bottom: 11px;
+        }
+        p {
+            font-size: 14px;
+            line-height: 25px;
+            letter-spacing: 0.05em;
+        }
+        &__dark {
+            margin: 0 -15px;
+            padding: 22px 27px;
+        }
+        &__list {
+            margin: 27px 0;
+            padding: 0;
+            list-style-type: none;
+            font-weight: normal;
+            font-size: 14px;
+            line-height: 35px;
+            letter-spacing: 0.05em;
+            text-transform: lowercase;
+            color: #000000;
+
+            li {
+                position: relative;
+                padding-left: 15px;
+
+                &:before {
+                    content: '';
+                    position: absolute;
+                    top: 16px;
+                    left: 0;
+                    border-radius: 50%;
+                    background-color: #000;
+                    width: 5px;
+                    height: 5px;
+                    margin-right: 10px;
+                    vertical-align: middle;
+                    overflow: hidden;
+                }
+            }
+        }
+        &__row {
+            flex-wrap: wrap;
+            gap: 0;
+
+            & > div {
+                width: 100%;
+                margin-bottom: 20px;
+            }
+
+            .btn {
+                width: 100%;
+                display: block;
+                margin: 30px auto 0;
+            }
+        }
+    }
+}
+
+.shedule {
+    margin-bottom: 61px;
+
+    &__title {
+        font-family: $font1;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 25px;
+        letter-spacing: 0.05em;
+        color: #000000;
+        margin: 0 0 21px;
+    }
+
+    &__body {
+        padding-left: 115px;
+    }
+
+    &__list {
+        margin: 0 0 42px;
+        padding: 0;
+        list-style-type: none;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 35px;
+        letter-spacing: 0.05em;
+        text-transform: lowercase;
+        color: #000000;
+
+        li {
+            position: relative;
+            padding-left: 15px;
+
+            &:before {
+                content: '';
+                position: absolute;
+                top: 16px;
+                left: 0;
+                border-radius: 50%;
+                background-color: #000;
+                width: 5px;
+                height: 5px;
+                margin-right: 10px;
+                vertical-align: middle;
+                overflow: hidden;
+            }
+        }
+    ;
+    }
+    @include r(767){
+        margin-bottom: 23px;
+        &__body {
+            padding-left: 0;
+        }
+        &__list {
+            margin: 0 0 23px;
+            padding: 0;
+            list-style-type: none;
+            font-weight: normal;
+            font-size: 14px;
+            line-height: 35px;
+            letter-spacing: 0.05em;
+            text-transform: lowercase;
+            color: #000000;
+
+            li {
+                padding-left: 0;
+                font-size: 14px;
+                line-height: 25px;
+                margin-bottom: 30px;
+                &:last-of-type{
+                    margin-bottom: 0;
+                }
+
+
+                &:before {
+                    display: none;
+                }
+                span{
+                    display: block;
+                }
+            }
+        }
+    }
 }
