--- a/src/scss/componets/learning-page.scss
+++ b/src/scss/componets/learning-page.scss
@@ -234,20 +234,9 @@
             padding-left: 15px;
 
             &:before {
-                content: '';
-                position: absolute;
-                top: 16px;
-                left: 0;
-                border-radius: 50%;
-                background-color: #000;
-                width: 5px;
-                height: 5px;
-                margin-right: 10px;
-                vertical-align: middle;
-                overflow: hidden;
+               display: none;
             }
         }
-    ;
     }
     @include r(767){
         margin-bottom: 23px;
