--- a/src/scss/componets/articles.scss
+++ b/src/scss/componets/articles.scss
@@ -1,23 +1,14 @@
 .articles{
-	margin: 15px 0;
+	margin: 86px 0 34px;
 	&__title{
-		display: inline-block;
-		font-weight: bold;
-		font-size: 24px;
+		font-family: $font1;
+		font-style: normal;
+		font-weight: 700;
+		font-size: 32px;
 		line-height: 25px;
 		letter-spacing: 0.05em;
-		position: relative;
-		width: fit-content;
-		margin-bottom: 40px;
-		&:after {
-			content: '';
-			position: absolute;
-			bottom: -15px;
-			left: 0;
-			width: 100%;
-			height: 3px;
-			background-color: #E30613;
-		}
+		color: #E30613;
+		margin-bottom: 79px;
 	}
 
 	&__body{
@@ -25,11 +16,11 @@
 		line-height: 25px;
 	}
 	&__item{
-		margin-bottom: 30px;
+		margin-bottom: 26px;
 	}
 	&__header{
 		display: flex;
-		margin-bottom: 30px;
+		margin-bottom: 23px;
 		justify-content: space-between;
 	}
 	&__name{
@@ -71,22 +62,31 @@
 	.btn{
 		display: block;
 		width: fit-content;
-		margin-top: 16px;
+		margin-top: 32px;
 		margin-right: 0;
 		margin-left: auto;
-		font-weight: bold;
+		border: none;
+		padding: 0;
+
+		font-family: $font1;
+		font-style: normal;
+		font-weight: 700;
 		font-size: 13px;
 		line-height: 16px;
 		letter-spacing: 0.05em;
-		padding: 8.5px 30px;
+		color: #E30613;
 	}
 
 	@include r(767){
+		margin: 0 0 29px;
 		&__title{
-			font-size: 20px;
+			font-size: 24px;
 			line-height: 25px;
+			text-align: center;
+			margin-bottom: 19px;
 		}
 		&__item{
+			margin-bottom: 12px;
 			&.active{
 				.articles__data{
 					display: block;
@@ -98,11 +98,14 @@
 		}
 		&__header{
 			flex-wrap: wrap;
+			margin-bottom: 14px;
 		}
 		&__name{
 			flex: 0 0 100%;
 			position: relative;
 			padding-right: 25px;
+			font-size: 12px;
+			line-height: 25px;
 			&:after{
 				content: '';
 				position: absolute;
@@ -117,9 +120,9 @@
 		}
 		&__data{
 			font-size: 12px;
-			text-align: right;
 			flex: 0 0 100%;
 			display: none;
+			margin-top: 16px;
 		}
 		&__row{
 			flex-wrap: wrap;
