--- a/src/scss/componets/pagination.scss
+++ b/src/scss/componets/pagination.scss
@@ -1,6 +1,8 @@
 .pagination{
 	text-align: center;
+	margin-bottom: 79px;
 	a,span{
+		font-family: $font1;
 		font-weight: normal;
 		color: #000;
 		font-size: 14px;
@@ -16,6 +18,7 @@
 		}
 	}
 	@include r(767){
+		margin-bottom: 22px;
 		a,span{
 			font-size: 12px;
 			&.active{
