--- a/src/scss/componets/articles-inner.scss
+++ b/src/scss/componets/articles-inner.scss
@@ -1,33 +1,34 @@
 .articles-inner{
-	margin: 15px 0;
+	margin: 86px 0 78px;
+	&__h1{
+		font-family: $font1;
+		font-style: normal;
+		font-weight: 700;
+		font-size: 32px;
+		line-height: 25px;
+		letter-spacing: 0.05em;
+		color: #E30613;
+		margin-bottom: 75px;
+	}
 	&__header{
 		display: flex;
-		margin-bottom: 30px;
+		margin-bottom: 62px;
 		justify-content: space-between;
 	}
 	&__title{
-		display: inline-block;
-		font-weight: bold;
+		font-family: $font1;
+		font-style: normal;
+		font-weight: 700;
 		font-size: 24px;
 		line-height: 35px;
 		letter-spacing: 0.05em;
-		position: relative;
-		width: fit-content;
-		margin-bottom: 40px;
-		&:after {
-			content: '';
-			position: absolute;
-			bottom: -15px;
-			left: 0;
-			width: 100%;
-			height: 3px;
-			background-color: #E30613;
-		}
+		color: #000000;
 	}
 	&__img{
 		position: relative;
 		margin-bottom: 30px;
 		img{
+			width: 100%;
 			display: block;
 			object-fit: cover;
 			border-radius: 20px;
@@ -56,7 +57,14 @@
 			}
 		}
 	}
+	.container{
+		max-width: 1160px;
+	}
 	@include r(767){
+		margin: 20px 0 26px;
+		&__h1{
+			display: none;
+		}
 		&__header{
 			flex-wrap: wrap;
 		}
