--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -9,7 +9,7 @@
 @font-face {
 	font-family: 'AvantGardeCTT';
 	src: url('../fonts/AvantGardeCTT/AvantGardeCTT-bold.ttf') format('truetype');
-	font-weight: bold;
+	font-weight: 700;
 	font-style: normal;
 }
 @font-face {
