--- a/src/template/_header.html
+++ b/src/template/_header.html
@@ -1,7 +1,9 @@
-<header class="header">
+<header class="header page">
     <div class="container">
         <div class="header__body">
-
+            <a href="" class="header__back">
+                <img src="./img/back-arrow.svg" width="39" height="16" alt="">
+            </a>
             <a class="header__phone" href="tel:88002500600" title="Телефон">8 800 2500 600</a>
             <button id="menu" type="button" class="header__button"><span></span></button>
             <nav class="nav">
