--- a/src/scss/mpr-franchise.scss
+++ b/src/scss/mpr-franchise.scss
@@ -211,6 +211,7 @@ img{
 @import "componets/footer-form";
 @import "componets/send-plan";
 @import "componets/number";
+@import "componets/rent";
 
 
 
