--- a/src/template/_header.html
+++ b/src/template/_header.html
@@ -1,4 +1,4 @@
-<header class="header page">
+<header class="header page gray">
     <div class="container">
         <div class="header__body">
             <a href="" class="header__back">
